Fix overflow not appearing in browse

--- a/client/src/styles/browse.module.scss
+++ b/client/src/styles/browse.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   padding: $spacing-small;
+  height: 100vh;
 }
 
 .shop-cards-container {
